# cointoss

./: .gitignore  Dockerfile  PHASE-BUILD.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  start.sh
.github/workflows/: ci.yml
cointoss/: __init__.py  cli.py  config.py
cointoss/agents/: __init__.py  astrologer.py  base.py  gambler.py  mathematician.py  numerologist.py  psychic.py  registry.py  skeptic.py
cointoss/api/: main.py
cointoss/api/routes/: agents.py  draws.py  predictions.py
cointoss/data/: celestial.py  database.py  models.py  queries.py  validation.py
cointoss/data/importers/: __init__.py  au_lotteries.py  base.py  lotto_america.py  ny_open_data.py
cointoss/engine/: __init__.py  debate.py  modes.py  scheduler.py  scoring.py  synthesis.py
tests/: test_agents.py  test_database.py  test_models.py  test_synthesis.py
ui/: package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  api.js  index.css
ui/src/components/: AgentCard.jsx  Card.jsx  LotteryBalls.jsx
ui/src/pages/: Agents.jsx  Dashboard.jsx  Debate.jsx  Predict.jsx
